body bkg color changed to papayawhip

--- a/test/css/style.css
+++ b/test/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: beige;
+    background-color: papayawhip;
     font-family: 'Courier New', Courier, monospace;
 }
 
